--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "shuffle-and-split",
+  "name": "A",
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "lodash.shuffle": "^4.0.0"
+    "lodash.shuffle": "^4.0.0",
+    "mocha": "^2.3.4",
+    "shuffle-and-split": "^1.0.2"
   },
   "devDependencies": {
     "standard": "^5.4.1"
